# clas12-fastmc

./: .gitignore  README.md
cpp/: CMakeLists.txt  README.md  fastmc.sh  make_training_data.cpp  run_batches_cpp.sh
scripts/: README.md  fast_mc.py  fastmc.sh  run_v10_chain.sh  run_v11_full_chain.sh  setup_v11.sh  train_single_particle.py
scripts_jpsi/: README.md  build_matching_cuts.py  check_status.sh  check_v10_both.sh  config.py  fastmc.sh  grid_fastmc.py  make_training_data.py  make_training_data_truthmatch.py  matching_cuts.py  merge_spring2019_inb.sh  plot_eff_slice.py  plot_gen_jpsi.py  plot_training_data.py  run_all_chains.sh  run_all_hipo2dat.sh  run_batches_tm.sh  run_v10_chain.sh  run_v11_full_chain.sh  run_v1_chain.sh  train_single_particle.py  validate_event_full.py  validate_fast_mc_v2.py
scripts_phi/: README.md  build_matching_cuts.py  fastmc.sh  make_training_data.py  make_training_data_truthmatch.py  merge_spring2019_inb.sh  requirements.txt  run_batches_tm.sh  run_v10_chain.sh  run_v11_full_chain.sh  validate_event_full.py
